ScoreBoard finishGame implemented